tests/ui/type/type-check/issue-116967-cannot-coerce-returned-result.rs
fn foo() -> Result<String, ()> {
    let out: Result<(), ()> = Ok(());
    out //~ ERROR mismatched types
}

fn main() {}
